# CLI-Chess

./: .gitignore  Cargo.toml  LICENSE  README.md  TODO.md  app.css  app.tcss  board.py  main.py  moves.py  pieces.py
src/: main.rs  pgn.rs  tui.rs
src/board/: mod.rs  position.rs  tests.rs
src/moves/: mod.rs
src/pieces/: mod.rs
src/pixel_art/: board_widget.rs  captured_bar.rs  colours.rs  game_over_modal.rs  load_game_modal.rs  mod.rs  move_history.rs  promotion_modal.rs  save_game_modal.rs  sprites.rs
src/tui/: draw.rs  input.rs  key.rs  mod.rs  selection.rs
